Fix alignment on mobile

--- a/packages/styles/src/components/header/_post-header.scss
+++ b/packages/styles/src/components/header/_post-header.scss
@@ -96,7 +96,8 @@ post-header {
   ul.list-inline {
     margin: 0;
     gap: 0.25rem;
-    @include media.only(desktop) {
+
+    &[slot='local-controls'] {
       align-items: center;
     }
   }
